content/_generated-doc/3.20/config/quarkus-agroal.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-dev-ui-enabled]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-dev-ui-enabled[`quarkus.datasource.dev-ui.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.dev-ui.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Activate or disable the dev ui page.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEV_UI_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEV_UI_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-dev-ui-allow-sql]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-dev-ui-allow-sql[`quarkus.datasource.dev-ui.allow-sql`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.dev-ui.allow-sql+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Allow sql queries in the Dev UI page


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEV_UI_ALLOW_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEV_UI_ALLOW_SQL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-dev-ui-append-to-default-select]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-dev-ui-append-to-default-select[`quarkus.datasource.dev-ui.append-to-default-select`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.dev-ui.append-to-default-select+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Append this to the select done to fetch the table values. eg: LIMIT 100 or TOP 100


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEV_UI_APPEND_TO_DEFAULT_SELECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEV_UI_APPEND_TO_DEFAULT_SELECT+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-dev-ui-allowed-db-host]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-dev-ui-allowed-db-host[`quarkus.datasource.dev-ui.allowed-db-host`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.dev-ui.allowed-db-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Allowed database host. By default, only localhost is allowed. Any provided host here will also be allowed. You can use the special value `++*++` to allow any DB host.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_DEV_UI_ALLOWED_DB_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_DEV_UI_ALLOWED_DB_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-jdbc]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc[`quarkus.datasource.jdbc`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
If we create a JDBC datasource for this datasource.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-jdbc-driver]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-driver[`quarkus.datasource.jdbc.driver`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.driver+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.driver`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.driver+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource driver class name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_DRIVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_DRIVER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-jdbc-transactions]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-transactions[`quarkus.datasource.jdbc.transactions`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.transactions+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.transactions`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.transactions+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities.

When enabling XA you will need a driver implementing `javax.sql.XADataSource`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:enabled[Integrate the JDBC Datasource with the JTA TransactionManager of Quarkus. This is the default.], tooltip:xa[Similarly to `enabled`, also enables integration with the JTA TransactionManager of Quarkus, but enabling XA transactions as well. Requires a JDBC driver implementing `javax.sql.XADataSource`], tooltip:disabled[Disables the Agroal integration with the Narayana TransactionManager. This is typically a bad idea, and is only useful in special cases\: make sure to not use this without having a deep understanding of the implications.]
|tooltip:enabled[Integrate the JDBC Datasource with the JTA TransactionManager of Quarkus. This is the default.]

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-jdbc-enable-metrics]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-enable-metrics[`quarkus.datasource.jdbc.enable-metrics`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.enable-metrics+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.enable-metrics`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.enable-metrics+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus-datasource-jdbc-telemetry]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-telemetry[`quarkus.datasource.jdbc.telemetry`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.telemetry+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.telemetry`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.telemetry+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enable OpenTelemetry JDBC instrumentation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TELEMETRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TELEMETRY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-agroal_quarkus-datasource-jdbc-url]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-url[`quarkus.datasource.jdbc.url`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.url+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.url`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.url+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource URL


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-initial-size]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-initial-size[`quarkus.datasource.jdbc.initial-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.initial-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.initial-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.initial-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_INITIAL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_INITIAL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-min-size]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-min-size[`quarkus.datasource.jdbc.min-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.min-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.min-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.min-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource pool minimum size


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MIN_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MIN_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`0`

a| [[quarkus-agroal_quarkus-datasource-jdbc-max-size]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-max-size[`quarkus.datasource.jdbc.max-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.max-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.max-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.max-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The datasource pool maximum size


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`20`

a| [[quarkus-agroal_quarkus-datasource-jdbc-background-validation-interval]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-background-validation-interval[`quarkus.datasource.jdbc.background-validation-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.background-validation-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.background-validation-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.background-validation-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The interval at which we validate idle connections in the background.

Set to `0` to disable background validation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_BACKGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_BACKGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|`2M`

a| [[quarkus-agroal_quarkus-datasource-jdbc-foreground-validation-interval]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-foreground-validation-interval[`quarkus.datasource.jdbc.foreground-validation-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.foreground-validation-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.foreground-validation-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.foreground-validation-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Perform foreground validation on connections that have been idle for longer than the specified interval.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_FOREGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_FOREGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-acquisition-timeout]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-acquisition-timeout[`quarkus.datasource.jdbc.acquisition-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.acquisition-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.acquisition-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.acquisition-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The timeout before cancelling the acquisition of a new connection


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ACQUISITION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ACQUISITION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|`5S`

a| [[quarkus-agroal_quarkus-datasource-jdbc-leak-detection-interval]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-leak-detection-interval[`quarkus.datasource.jdbc.leak-detection-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.leak-detection-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.leak-detection-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.leak-detection-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The interval at which we check for connection leaks.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_LEAK_DETECTION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_LEAK_DETECTION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|`This feature is disabled by default.`

a| [[quarkus-agroal_quarkus-datasource-jdbc-idle-removal-interval]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-idle-removal-interval[`quarkus.datasource.jdbc.idle-removal-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.idle-removal-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.idle-removal-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.idle-removal-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The interval at which we try to remove idle connections.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_IDLE_REMOVAL_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_IDLE_REMOVAL_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|`5M`

a| [[quarkus-agroal_quarkus-datasource-jdbc-max-lifetime]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-max-lifetime[`quarkus.datasource.jdbc.max-lifetime`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.max-lifetime+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.max-lifetime`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.max-lifetime+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The max lifetime of a connection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MAX_LIFETIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MAX_LIFETIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-agroal_quarkus-datasource[icon:question-circle[title=More information about the Duration format]]
|`By default, there is no restriction on the lifespan of a connection.`

a| [[quarkus-agroal_quarkus-datasource-jdbc-transaction-isolation-level]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-transaction-isolation-level[`quarkus.datasource.jdbc.transaction-isolation-level`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.transaction-isolation-level+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.transaction-isolation-level`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.transaction-isolation-level+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The transaction isolation level.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_ISOLATION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_ISOLATION_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
a|`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable`
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-extended-leak-report]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-extended-leak-report[`quarkus.datasource.jdbc.extended-leak-report`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.extended-leak-report+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.extended-leak-report`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.extended-leak-report+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Collect and display extra troubleshooting info on leaked connections.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_EXTENDED_LEAK_REPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_EXTENDED_LEAK_REPORT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-agroal_quarkus-datasource-jdbc-flush-on-close]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-flush-on-close[`quarkus.datasource.jdbc.flush-on-close`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.flush-on-close+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.flush-on-close`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.flush-on-close+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Allows connections to be flushed upon return to the pool. It's not enabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_FLUSH_ON_CLOSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_FLUSH_ON_CLOSE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-agroal_quarkus-datasource-jdbc-detect-statement-leaks]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-detect-statement-leaks[`quarkus.datasource.jdbc.detect-statement-leaks`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.detect-statement-leaks+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.detect-statement-leaks`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.detect-statement-leaks+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
When enabled, Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_DETECT_STATEMENT_LEAKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_DETECT_STATEMENT_LEAKS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-agroal_quarkus-datasource-jdbc-new-connection-sql]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-new-connection-sql[`quarkus.datasource.jdbc.new-connection-sql`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.new-connection-sql+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.new-connection-sql`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.new-connection-sql+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Query executed when first using a connection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_NEW_CONNECTION_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_NEW_CONNECTION_SQL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-validation-query-sql]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-validation-query-sql[`quarkus.datasource.jdbc.validation-query-sql`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.validation-query-sql+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.validation-query-sql`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.validation-query-sql+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Query executed to validate a connection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_VALIDATION_QUERY_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_VALIDATION_QUERY_SQL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-validate-on-borrow]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-validate-on-borrow[`quarkus.datasource.jdbc.validate-on-borrow`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.validate-on-borrow+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.validate-on-borrow`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.validate-on-borrow+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Forces connection validation prior to acquisition (foreground validation) regardless of the idle status.

Because of the overhead of performing validation on every call, it’s recommended to rely on default idle validation instead, and to leave this to `false`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_VALIDATE_ON_BORROW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_VALIDATE_ON_BORROW+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-agroal_quarkus-datasource-jdbc-pooling-enabled]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-pooling-enabled[`quarkus.datasource.jdbc.pooling-enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.pooling-enabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.pooling-enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.pooling-enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Disable pooling to prevent reuse of Connections. Use this when an external pool manages the life-cycle of Connections.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_POOLING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_POOLING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-agroal_quarkus-datasource-jdbc-enable-recovery]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-enable-recovery[`quarkus.datasource.jdbc.enable-recovery`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.enable-recovery+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.enable-recovery`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.enable-recovery+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether to enable recovery for this datasource.

Normally a transaction manager will call xa_recover () on an XA connection during recovery to obtain a list of transaction branches that are currently in a prepared or heuristically completed state. However, it can happen that multiple XA connections connect to the same datasource which would all return the same set of branches and for reasons of improved performance only one should be used for recover() calls. The default value for this configuration property is true because when there is only one connection it is vital for data consistency that the connection is able to report its list of prepared or heuristically completed branches.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ENABLE_RECOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ENABLE_RECOVERY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-agroal_quarkus-datasource-jdbc-transaction-requirement]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-transaction-requirement[`quarkus.datasource.jdbc.transaction-requirement`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.transaction-requirement+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.transaction-requirement`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.transaction-requirement+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_REQUIREMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_REQUIREMENT+++`
endif::add-copy-button-to-env-var[]
--
a|`off`, `warn`, `strict`
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-additional-jdbc-properties-property-key]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-additional-jdbc-properties-property-key[`quarkus.datasource.jdbc.additional-jdbc-properties."property-key"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.additional-jdbc-properties."property-key"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.additional-jdbc-properties."property-key"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.additional-jdbc-properties."property-key"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Other unspecified properties to be passed to the JDBC driver when creating new connections.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ADDITIONAL_JDBC_PROPERTIES__PROPERTY_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ADDITIONAL_JDBC_PROPERTIES__PROPERTY_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-agroal_quarkus-datasource-jdbc-telemetry-enabled]] [.property-path]##link:#quarkus-agroal_quarkus-datasource-jdbc-telemetry-enabled[`quarkus.datasource.jdbc.telemetry.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.jdbc.telemetry.enabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".jdbc.telemetry.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".jdbc.telemetry.enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Enable OpenTelemetry JDBC instrumentation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TELEMETRY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TELEMETRY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false if quarkus.datasource.jdbc.telemetry=false and true if quarkus.datasource.jdbc.telemetry=true`

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-agroal_quarkus-datasource]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
